--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -43,4 +43,4 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
-          aws s3 sync dist/ s3://$AWS_S3_BUCKET --delete
+          aws s3 sync ./dist/project_1/browser s3://$AWS_S3_BUCKET --delete
